--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^0.13.5
+  scroll_snap_list: ^0.9.1
 
 
   # The following adds the Cupertino Icons font to your application.
